--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://umesh-shahi.com.np",
+  "homepage": "https://919Umesh.github.io/Umesh_Profile",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -25,11 +25,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,9 +51,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/919Umesh/Umesh.git"
   }
 }
